@@ -41,9 +41,9 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Caliburn.Autofac", "src\Cal
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "Caliburn.Prism", "src\Caliburn.Prism\Caliburn.Prism.csproj", "{EC8EA52F-C018-4028-9F2D-5378D1164468}"
 EndProject
-Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Containers", "Containers", "{D8D6CFB8-8ED1-464E-BF31-319E76C6E828}"
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "IoC", "IoC", "{D8D6CFB8-8ED1-464E-BF31-319E76C6E828}"
 EndProject
-Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "ProxyFactories", "ProxyFactories", "{25B5A3E9-5E48-4638-9833-3F75FDF7D99F}"
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "AOP", "AOP", "{25B5A3E9-5E48-4638-9833-3F75FDF7D99F}"
 EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "Frameworks", "Frameworks", "{29279288-266F-4F8D-BBED-DFF8ACE6E7C1}"
 EndProject
