@@ -70,12 +70,18 @@
     <Compile Include="CompositeApplicationLibraryConfiguration.cs" />
     <Compile Include="ConsoleLogger.cs" />
     <Compile Include="ExtensionMethods.cs" />
+    <Compile Include="IModelRegionManager.cs" />
+    <Compile Include="DefaultModelRegionManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Caliburn.Core\Caliburn.Core.csproj">
       <Project>{D7357C4C-BFFF-4EE4-8D40-0803FAAFF38A}</Project>
       <Name>Caliburn.Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Caliburn.PresentationFramework\Caliburn.PresentationFramework.csproj">
+      <Project>{4B343291-DB03-4ADA-96CD-3CFFA3C838D7}</Project>
+      <Name>Caliburn.PresentationFramework</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
